Ingress/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: vote
  #annotations: 
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result
            port: 
              number: 5001
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote
            port: 
              number: 5000
